feat: add mask_type model and related api (index, show, create)
