# db/schema.rb
@@ -10,9 +10,18 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_04_13_144713) do
+ActiveRecord::Schema[7.1].define(version: 2025_04_14_070708) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "mask_types", force: :cascade do |t|
+    t.string "name", null: false
+    t.string "description"
+    t.string "color"
+    t.string "size"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
 
   create_table "masks", force: :cascade do |t|
     t.string "name"
@@ -21,6 +30,8 @@ ActiveRecord::Schema[7.1].define(version: 2025_04_13_144713) do
     t.bigint "pharmacy_id", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "mask_type_id"
+    t.index ["mask_type_id"], name: "index_masks_on_mask_type_id"
     t.index ["pharmacy_id"], name: "index_masks_on_pharmacy_id"
   end
 
